# cdd-python-client

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLIANCE.md  DEVELOPING.md  GEMINI.md  Makefile  PUBLISH.md  PUBLISH_OUTPUT.md  README.md  USAGE.md  append_tests.py  client.py  docs.json  fix_cli_extra.py  make.bat  parse_spec.py  prompt.md  pyproject.toml  spec.json  tmp.txt  update_models.py  update_tests.py  update_tests2.py  update_tests3.py  update_tests4.py
.github/workflows/: ci.yml  release-wasm.yml  uv.yml
scripts/: build_wasm.py  doc_coverage.py  pre-commit  run_petstore_test.py  update_badges.py
src/openapi_client/: __init__.py  cli.py  models.py
src/openapi_client/classes/: emit.py  parse.py
src/openapi_client/cli_sdk/: __init__.py  emit.py  parse.py
src/openapi_client/cli_sdk_cdd/: __init__.py  emit.py
src/openapi_client/docstrings/: __init__.py  emit.py  parse.py
src/openapi_client/fastapi/: __init__.py  emit.py  parse.py
src/openapi_client/functions/: emit.py  parse.py  utils.py
src/openapi_client/mocks/: emit.py  parse.py
src/openapi_client/openapi/: __init__.py  emit.py  parse.py
src/openapi_client/routes/: emit.py  parse.py
src/openapi_client/sqlalchemy_cdd/: __init__.py  emit.py
src/openapi_client/tests/: emit.py  parse.py
test/: test_client.py
tests/: test_cli.py  test_cli_extra.py  test_cli_extra2.py  test_cli_extra3.py  test_cli_sdk.py  test_client.py  test_compliance_updates.py  test_coverage_emit_functions_extra.py  test_coverage_emit_ref.py  test_coverage_emit_test.py  test_coverage_emit_test2.py  test_coverage_gap.py  test_coverage_openapi_parse.py  test_coverage_parse_tests.py  test_coverage_utils.py  test_openapi.py
