[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-python-client"
version = "0.0.1"
description = "OpenAPI 3.2.0 Python Client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "libcst",
    "urllib3",
    "python-cdd>=0.0.98",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "interrogate",
    "build",
    "pdoc",
]

[project.scripts]
"cdd-python-client" = "openapi_client.cli:main"
"cdd-python" = "openapi_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openapi_client"]
