[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-python-client"
version = "0.0.1"
description = "OpenAPI 3.2.0 Python Client"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "libcst",
    "urllib3",
    "python-cdd>=0.0.98",
    "eval_type_backport; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "interrogate",
    "build",
    "pdoc",
    "py2wasm",
]

[project.scripts]
"cdd-python-all" = "openapi_client.cli:main"
"cdd-python" = "openapi_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openapi_client"]

[tool.pytest.ini_options]
testpaths = ["tests", "test"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.15.13",
]
